--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
 	},
 	"homepage": "https://github.com/craigrileyuk/tailwind-fluid-typography#readme",
 	"peerDependencies": {
-		"tailwindcss": "^1.2.0"
+		"tailwindcss": ">=1.2.0"
 	}
 }
