--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "Craig Riley"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
@@ -29,5 +31,13 @@
   "homepage": "https://github.com/craigrileyuk/tailwind-fluid-typography#readme",
   "peerDependencies": {
     "tailwindcss": ">=1.2.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^2.0.0",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
+    "postcss-import": "^14.0.2",
+    "tailwindcss": "^3.0.18",
+    "vite": "^2.7.13"
   }
 }
