--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "tailwind-fluid-typography",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "description": "Fluid typography plugin for the tailwindcss framework",
-  "main": "index.js",
+  "main": "index.cjs",
+  "module": "index.js",
+  "exports": {
+    "require": "./index.cjs",
+    "import": "./index.js"
+  },
+  "type": "module",
   "contributors": [
     "Craig Riley"
   ],
