--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "Craig Riley"
   ],
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "pnpm --filter=demo run dev",
+    "build": "pnpm --filter=demo run build",
+    "preview": "pnpm --filter=demo run preview"
   },
   "repository": {
     "type": "git",
@@ -37,13 +37,5 @@
   "homepage": "https://github.com/craigrileyuk/tailwind-fluid-typography#readme",
   "peerDependencies": {
     "tailwindcss": ">=1.2.0"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^2.0.0",
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.6",
-    "postcss-import": "^14.0.2",
-    "tailwindcss": "^3.0.18",
-    "vite": "^2.7.13"
   }
 }
